--- a/README
+++ b/README
@@ -1,1 +1,16 @@
+Из «Бета-Банка» стали уходить клиенты. Каждый месяц. Немного, но заметно. Банковские маркетологи посчитали: сохранять текущих клиентов дешевле, чем привлекать новых.
 
+Нужно спрогнозировать, уйдёт клиент из банка в ближайшее время или нет. Вам предоставлены исторические данные о поведении клиентов и расторжении договоров с банком.
+
+Постройте модель с предельно большим значением F1-меры. Чтобы сдать проект успешно, нужно довести метрику до 0.59. Проверьте F1-меру на тестовой выборке самостоятельно.
+
+Дополнительно измеряйте AUC-ROC, сравнивайте её значение с F1-мерой.
+
+
+Результаты работы:
+
+По результатам выбора модели лучшей оказалась модель Случайный лес, в ней значение F1-меры получилось 0.576 без учёта дисбаланса. 
+Лучшей "борьбой с дисбалансом" оказался метод увеличение выборки, при его использовании значение F1-меры увеличилось до 0.588. 
+Максимальный показатель значения F1-меры оказалсь при следующих гиперпараметрах: глубина - 19, количество деревьев - 227.
+При этих гиперпараметрах были определены показатели тестовой модели: значение F1-меры = 0.628, качество 0.851, AUC-ROC = 0.854. 
+Качество константной модели равно 0.811, что говорит о том, что нашу тестовую модель можно считать адекватной и применимой
